# hw12.1

./: pyproject.toml
tests/: test_arrs.py
utils/: arrs.py
