[tool.poetry]
name = "pytest-proj"
version = "0.1.0"
description = ""
authors = ["Eisiehame <knurov24@gmail.com>"]
readme = "README.md"
packages = [{include = "pytest_proj"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
