[tool.poetry]
name = "pytest-proj"
version = "0.1.0"
description = ""
authors = ["Eisiehame <knurov24@gmail.com>"]
readme = "README.md"
packages = [{include = "pytest_proj"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
